# metadata-transfer-plugin

./: .gitignore  AttributeMetadata.cpp  CMakeLists.txt  README.md
test/: assert.cpp  code-attr.cpp  codegen-example.cpp  example.cpp  fun-inheritance.cpp  fun-pointer.cpp  in-min.cpp  inheritance.cpp  lambda.cpp  macro.cpp  min-ex.cpp  min-macro.cpp  reint_cast.cpp  test.cpp
